--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "animate.css": "^4.1.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "vivus": "^0.4.5"
   }
 }
